<resources>
    <string name="app_name">SharedPreferenceApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hospital_navigator">Hospital Navigator</string>
    <string name="nav_logout">LOGOUT</string>
    <string name="nav_patientaddview">ENTER/VIEW PATIENT</string>
    <string name="nav_addtest">ENTER TEST DATA</string>
    <string name="nav_viewtest">VIEW TESTS</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_second_main">SecondMainActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">""</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_username2">Nurse does not exist</string>
    <string name="invalid_password">Password length must be > 0 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_add_nurse">AddNurse</string>
</resources>